[gd_scene load_steps=7 format=3 uid="uid://xqpholoflcnb"]

[ext_resource type="Script" path="res://scenes/ui/level/chest_menu.gd" id="1_0fk55"]
[ext_resource type="PackedScene" uid="uid://cithfjyabe6e5" path="res://scenes/ui/level/store_item.tscn" id="3_52w8y"]
[ext_resource type="Texture2D" uid="uid://64ptj2lttm10" path="res://assets/textures/ui/panel.png" id="3_d2cf3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sv45o"]
atlas = ExtResource("3_d2cf3")
region = Rect2(200, 200, 100, 100)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ct8wt"]
texture = SubResource("AtlasTexture_sv45o")
texture_margin_left = 20.0
texture_margin_top = 20.0
texture_margin_right = 20.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0q4ea"]

[node name="ChestMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_0fk55")

[node name="Mask" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.4)

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(600, 650)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -275.0
offset_right = 300.0
offset_bottom = 275.0
grow_horizontal = 2
grow_vertical = 2
rotation = 6.28319
pivot_offset = Vector2(300, 325)
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_ct8wt")
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.396078, 0.403922, 0.419608, 1)
theme_override_font_sizes/font_size = 30
text = "观看一个30秒不可跳过的广告
即可获得以下两个道具
提示：也可点击右上角商店按钮
单独购买道具（更贵哦）"
horizontal_alignment = 1
autowrap_mode = 3

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_0q4ea")

[node name="StoreItem1" parent="Panel/VBoxContainer" instance=ExtResource("3_52w8y")]
layout_mode = 2
disabled = true
type = 4

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_0q4ea")

[node name="StoreItem2" parent="Panel/VBoxContainer" instance=ExtResource("3_52w8y")]
layout_mode = 2
disabled = true

[node name="VBoxContainer2" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 8

[node name="ConfirmButton" type="Button" parent="Panel/VBoxContainer2"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "确定"
icon_alignment = 2

[node name="CancelButton" type="Button" parent="Panel/VBoxContainer2"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "取消"
icon_alignment = 2

[connection signal="button_down" from="Panel/VBoxContainer2/ConfirmButton" to="." method="_on_confirm_button_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer2/CancelButton" to="." method="_on_cancel_button_button_down"]
